base/mqtt/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt
spec:
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
      name: mqtt
  type: ClusterIP
